--- a/Setup/SetupUI/Views/SelectProductView.xaml
+++ b/Setup/SetupUI/Views/SelectProductView.xaml
@@ -23,10 +23,10 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Scribens sera installé sur" Grid.Row="1" Margin="30 0 0 15"
+        <TextBlock Text="Scribens sera installé sur :" Grid.Row="1" Margin="30 0 0 15"
                    FontSize="30" Foreground="{StaticResource TextForegroundColor}"/>
 
-        <Grid Grid.Row="2" Margin="50 50 0 0">
+        <Grid Grid.Row="2" Margin="50 20 0 0">
             <Grid.Resources>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Foreground" Value="{StaticResource TextForegroundColor}"/>
