--- a/Source/ScribensUI/Views/AccountExpiredErrorView.xaml
+++ b/Source/ScribensUI/Views/AccountExpiredErrorView.xaml
@@ -31,8 +31,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Image Source="pack://application:,,,/PluginScribens_Word;component/Resources/calendar2.png" Width="64"
-                                       RenderOptions.BitmapScalingMode="HighQuality"/>
+        <Image Source="/PluginScribens.UI;component/Resources/calendar2.png" Width="64" RenderOptions.BitmapScalingMode="HighQuality"/>
 
         <TextBlock Text="{Binding Path=ErrorMessage, Converter={StaticResource StringResourceConverter}}"
                                            TextWrapping="Wrap" HorizontalAlignment="Center" Grid.Row="2" TextAlignment="Center"
