--- a/Source/ScribensUI/Views/ExceedMaxCharacterErrorView.xaml
+++ b/Source/ScribensUI/Views/ExceedMaxCharacterErrorView.xaml
@@ -18,7 +18,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Image Source="pack://application:,,,/PluginScribens_Word;component/Resources/calendar1.png" Width="64"
+        <Image Source="/PluginScribens.UI;component/Resources/calendar1.png" Width="64"
                                        RenderOptions.BitmapScalingMode="HighQuality"/>
         <TextBlock Text="{Binding Path=ErrorMessage, Converter={StaticResource StringResourceConverter}}" 
                                        TextWrapping="Wrap" Grid.Row="2" FontSize="16pt" Foreground="#297BBF"
