--- a/Source/ScribensUI/Views/ExceedTrialErrorView.xaml
+++ b/Source/ScribensUI/Views/ExceedTrialErrorView.xaml
@@ -31,7 +31,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Image Source="pack://application:,,,/PluginScribens_Word;component/Resources/calendar2.png" Width="64"
+        <Image Source="/PluginScribens.UI;component/Resources/calendar2.png" Width="64"
                                        RenderOptions.BitmapScalingMode="HighQuality"/>
 
         <TextBlock Text="{Binding Path=ErrorMessage, Converter={StaticResource StringResourceConverter}}"
