--- a/Source/ScribensUI/Views/UserInfoView.xaml
+++ b/Source/ScribensUI/Views/UserInfoView.xaml
@@ -53,7 +53,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Image Source="/PluginScribens_Word;component/Resources/account.png" Width="48" Height="48" Grid.Row="1" Grid.ColumnSpan="3"/>
+                <Image Source="/PluginScribens.UI;component/Resources/account.png" Width="48" Height="48" Grid.Row="1" Grid.ColumnSpan="3"/>
                 <Label Content="{Binding Path=LoginLabel, FallbackValue=Login}" Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="0" 
                        HorizontalAlignment="Center" FontSize="13pt" Margin="0 10 0 50"/>
 
@@ -103,7 +103,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Image Source="/PluginScribens_Word;component/Resources/account.png" Width="48" Height="48" 
+                <Image Source="/PluginScribens.UI;component/Resources/account.png" Width="48" Height="48" 
                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
                 <Label Content="{Binding Path=MyAccountLabel, FallbackValue='My Account'}" 
                        Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center"
@@ -159,8 +159,7 @@
 
         <Border Grid.Row="0" Background="#1F87CEFA" 
                 Visibility="{Binding Path=LoadingIndicatorVisibility, FallbackValue=Collapsed}">
-            <controls:AnimatedImage x:Name="LoadingImage" Width="48" Height="48"
-                                    GifSource="/PluginScribens_Word;component/Resources/reloadx124.gif"/>
+            <controls:AnimatedImage x:Name="LoadingImage" Width="48" Height="48" GifSource="/PluginScribens.UI;component/Resources/reloadx124.gif"/>
         </Border>
     </Grid>
     
